CHANGES IN VERSION 1.13.2
-------------------------
 o Add required fasta file <2017-04-04 Tue>
 o Replace old synobj2 with synobj3 <2017-04-04 Tue>
 
CHANGES IN VERSION 1.13.1
-------------------------
 o new synobj3 data <2017-04-03 Mon>

CHANGES IN VERSION 1.3.1
------------------------
 o new example data to illustrate ion mobility and peak matching
   [2014-05-16 Fri]

CHANGES IN VERSION 1.0.0
------------------------
 o marking as stable/released <2013-05-13 Mon>

CHANGES IN VERSION 0.99.2
-------------------------
 o updated data/ups*rda and inst/extdata/master.rds 
   for synapter v0.99.6 <2012-07-11 Wed>
 o Added MassSpectrometryData biocView <2012-09-10 Mon>

CHANGES IN VERSION 0.99.1
-------------------------
 o changed hardcoded paths to relative <2012-06-13 Wed>

CHANGES IN VERSION 0.99.0
-------------------------
 o Bioconductor submission <2012-06-08 Fri>